adding dummy version that creates 10000 entries

--- a/manifest.yml
+++ b/manifest.yml
@@ -6,3 +6,5 @@ applications:
   buildpack: https://github.com/cloudfoundry/go-buildpack
   env:
     GOPACKAGENAME : redis-app
+  services:
+    - redis-service
